removed buggy native scrollbar version from demo. some changes to swipe physics

--- a/examples/angular-demo/src/app/components/missing-page-virtualizer-demo/missing-page-virtualizer-demo.component.css
+++ b/examples/angular-demo/src/app/components/missing-page-virtualizer-demo/missing-page-virtualizer-demo.component.css
@@ -251,6 +251,7 @@ missing-page-virtualizer[swipe-scroll] * {
   overscroll-behavior: none;
   -webkit-user-drag: none;
   user-select: none;
+  -webkit-overflow-scrolling: touch;
 }
 feed-card,
 .instruction-panel {
